@@ -685,8 +685,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                        <property name="label">gtk-save-as</property>
-                        <property name="use_stock">True</property>
+                        <property name="label" translatable="true">Save _As...</property>
                         <property name="sensitive">False</property>
                       </widget>
                       <packing>
